@@ -1,5 +1,11 @@
 2015-12-08  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
+	* sparc_init.c (sparc_init): Hook sparc_set_initial_registers_tid.
+	* sparc_initreg.c: New file.
+	* Makefile.am (sparc_SRCS): Added sparc_initreg.c.
+
+2015-12-08  Jose E. Marchesi  <jose.marchesi@oracle.com>
+
 	* sparc_corenote.c: Header comment typo fixed.
 	(PRSTATUS_REGSET_ITEMS): Defined, so the PC can be fetched from
 	core files.
